import React from 'react';
import { mockDispatch, mockMapAppState, mockPrepareSelector } from '../../../../../redux/__mocks__/mocks';
import { renderForSnapshotTest } from '../../../../../../tests/utils/RenderingHelpers';
import { MapAppUsageStep } from '../../redux/MapAppState';
import { DeviceLocation } from '../DeviceLocation';

jest.mock('react-redux', () => ({
    ...jest.requireActual('react-redux'),
    useDispatch: () => mockDispatch,
    useSelector: () => mockPrepareSelector(),
}));

describe('device list snapshot tests', () => {
    it('should show address loader and a list devices matching the selected marker without the create device item', () => {
        mockMapAppState({
            usageStep: MapAppUsageStep.HOME_SCREEN,
            devices: [
                { id: '85378', createdDate: '0000000000000', creatorID: 'John Doe', location: { lat: 6.3, lon: 9.2 } },
            ],
            selectedMarker: {
                location: { lat: 6.3, lon: 9.2 },
                address: null,
            },
        });
        const component = renderForSnapshotTest(<DeviceLocation />);

        expect(component).toMatchSnapshot();
    });

    it('should show the address and a list devices matching the selected marker with the create device item', () => {
        mockMapAppState({
            usageStep: MapAppUsageStep.DEVICE_MANAGEMENT,
            currentUserID: 'I created the second one!',
            devices: [
                {
                    id: 'Not matching selected marker',
                    createdDate: '0000000000001',
                    creatorID: 'someone',
                    location: { lat: 0, lon: 0 },
                },
                {
                    id: 'Matching selected marker',
                    createdDate: '0000000000001',
                    creatorID: 'I created the second one!',
                    location: { lat: 26.3553423, lon: 19.23131 },
                },
            ],
            selectedMarker: {
                location: { lat: 26.3553423, lon: 19.23131 },
                address: {
                    addressLine1: 'Street and number',
                    addressLine2: 'District and city',
                },
            },
        });
        const component = renderForSnapshotTest(<DeviceLocation />);

        expect(component).toMatchSnapshot();
    });
});
