// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extra Item snapshot tests should show only the create account or login button 1`] = `
<div
  className="device-list-item-container"
>
  <div
    className="device-list-item-shadow device-list-item-shadow-left device-list-item-create-shadow-left"
  />
  <div
    className="device-list-item-shadow device-list-item-shadow-right device-list-item-create-shadow-right"
  />
  <img
    alt="device-list-item-image"
    className="device-list-item-image"
    src="test-file-stub"
  />
  <div
    className="device-list-item"
  >
    <p
      className="device-list-item-opaque-text"
    >
      deviceNoDeviceHere
    </p>
    <button
      data-testid="createAccountOrLoginButton"
      onClick={[Function]}
    >
      deviceCreateAccountOrLogin
    </button>
  </div>
</div>
`;

exports[`Extra Item snapshot tests should show only the create device item 1`] = `
<div
  className="device-list-item-container"
>
  <div
    className="device-list-item-shadow device-list-item-shadow-left device-list-item-create-shadow-left"
  />
  <div
    className="device-list-item-shadow device-list-item-shadow-right device-list-item-create-shadow-right"
  />
  <img
    alt="device-list-item-image"
    className="device-list-item-image"
    src="test-file-stub"
  />
  <div
    className="device-list-item"
  >
    <p
      className="device-list-item-opaque-text"
    >
      deviceNoDeviceHere
    </p>
    <button
      data-testid="createDeviceButton"
      onClick={[Function]}
    >
      deviceAddDevice
    </button>
  </div>
</div>
`;

exports[`Extra Item snapshot tests should show the temporary item and the create device item 1`] = `
<div
  className="device-list-item-container"
>
  <div
    className="device-list-item-shadow device-list-item-shadow-left device-list-item-create-shadow-left"
  />
  <div
    className="device-list-item-shadow device-list-item-shadow-right device-list-item-create-shadow-right"
  />
  <img
    alt="device-list-item-image"
    className="device-list-item-image"
    src="test-file-stub"
  />
  <div
    className="device-list-item"
  >
    <p>
      deviceWaitingForCreation
    </p>
  </div>
</div>
`;
